created get-activities api
